@@ -4,6 +4,7 @@
 - Set retained message status for QoS 2 messages (bug #726535).
 - Only abort with an error when opening listening sockets if no address family
   is available, rather than aborting when any address family is not available.
+- Don't clean queued messages when a non clean session client reconnects.
 
 0.9.2 - 20110208
 ================
